Fix footer wrapping

--- a/footer/footer.css
+++ b/footer/footer.css
@@ -11,4 +11,5 @@
     padding: 50px 30%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
