--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ a {
     background-color: #0481b1;
 }
 
-.mission , .question {
+.section {
     margin: 30px 20%;
     background-color: #24a8d5;
     border-radius: 25px;
